add: new scrollbar fix: some bugs with error messages

--- a/front/pages/loginPage.html
+++ b/front/pages/loginPage.html
@@ -59,7 +59,7 @@
             <span class="mailValid"></span>
 
             <label for="userPassword">Password</label>
-            <input type="text" id="userPassword">
+            <input type="password" id="userPassword">
             <span class="passwordValid"></span>
 
             <button type="submit">Log In</button>
