finish: log-in/sign-up page

--- a/front/pages/loginPage.html
+++ b/front/pages/loginPage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Main Page</title>
+    <title>Sign up / Log in</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,10 +16,14 @@
 <body>
 <header>
     <img src="/front/assets/cinemaLogo.png" alt="">
-    <div class="menu">
-        <div class="stepButton">1 Step</div>
-        <div class="stepButton">2 Step</div>
-        <div class="stepButton">3 Step</div>
+    <div class="steps">
+        <a class="stepButton current">1</a>
+        <div class="roadCircle"></div>
+        <div class="roadCircle"></div>
+        <a href="SelectFavorites.html" class="stepButton">2</a>
+        <div class="roadCircle"></div>
+        <div class="roadCircle"></div>
+        <a class="stepButton">3</a>
     </div>
 </header>
 <div class="mainContent">
