--- a/front/pages/loginPage.html
+++ b/front/pages/loginPage.html
@@ -10,8 +10,8 @@
 
 
 
-    <link rel="stylesheet" href="/front/styles/mainStyles.css">
-    <link rel="stylesheet" href="/front/styles/loginPage.css">
+    <link rel="stylesheet" href="../styles/mainStyles.css">
+    <link rel="stylesheet" href="../styles/loginPage.css">
 </head>
 <body>
 <header>
@@ -76,7 +76,7 @@
 
 
 
-<script type="module" src="/front/scripts/logInAndSignUp.js"></script>
-<script type="module" src="/front/scripts/inputsValidation.js"></script>
+<script type="module" src="../scripts/logInAndSignUp.js"></script>
+<script type="module" src="../scripts/inputsValidation.js"></script>
 </body>
 </html>
