finish: log-in/sign-up page

--- a/front/pages/loginPage.html
+++ b/front/pages/loginPage.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <header>
-    <img src="/front/assets/cinemaLogo.png" alt="">
+    <img src="../assets/cinemaLogo.png" alt="">
     <div class="steps">
         <a class="stepButton current">1</a>
         <div class="roadCircle"></div>
