finish: log-in/sign-up page

--- a/front/pages/loginPage.html
+++ b/front/pages/loginPage.html
@@ -10,12 +10,12 @@
 
 
 
-    <link rel="stylesheet" href="../styles/mainStyles.css">
-    <link rel="stylesheet" href="../styles/loginPage.css">
+    <link rel="stylesheet" href="/front/styles/mainStyles.css">
+    <link rel="stylesheet" href="/front/styles/loginPage.css">
 </head>
 <body>
 <header>
-    <img src="../assets/cinemaLogo.png" alt="">
+    <img src="/front/assets/cinemaLogo.png" alt="">
     <div class="steps">
         <a class="stepButton current">1</a>
         <div class="roadCircle"></div>
