finish: log-in/sign-up page

--- a/front/pages/loginPage.html
+++ b/front/pages/loginPage.html
@@ -76,7 +76,7 @@
 
 
 
-<script type="module" src="../scripts/logInAndSignUp.js"></script>
-<script type="module" src="../scripts/inputsValidation.js"></script>
+<script type="module" src="/front/scripts/logInAndSignUp.js"></script>
+<script type="module" src="/front/scripts/inputsValidation.js"></script>
 </body>
 </html>
