finish: "select favorites" page

--- a/front/pages/SelectFavorites.html
+++ b/front/pages/SelectFavorites.html
@@ -5,6 +5,14 @@
     <title>Select Favorites</title>
     <link rel="stylesheet" href="/front/styles/mainStyles.css">
     <link rel="stylesheet" href="/front/styles/selectFavorites.css">
+
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Gemunu+Libre&display=swap" rel="stylesheet">
+
+
 </head>
 <body>
 <header>
@@ -33,9 +41,10 @@
             </div>
         </div>
     </div>
+    <button class="submitFavoritesButton">Next</button>
 </div>
 
 
-<script type="module" src="/front/scripts/movieListChang.js"></script>
+<script type="module" src="/front/scripts/movieListChange.js"></script>
 </body>
 </html>
