add: "select favorite" styling and collecting in sessionStorage

--- a/front/pages/SelectFavorites.html
+++ b/front/pages/SelectFavorites.html
@@ -33,18 +33,20 @@
         <img src="/front/assets/icons/search.png" alt="" class="searchIcon">
     </label>
     <div class="movieList">
-        <div class="movie" style="background-image: url(/front/assets/fightClub.jpg);">
-            <div class="textInfo">
-                <span class="ageRating">18+</span>
-                <span class="movieName">Fight Club(1999)</span>
-                <span class="movieRate">(4.7) ★★★★★</span>
-            </div>
-        </div>
+<!--        <div class="movie" style="background-image: url(/front/assets/fightClub.jpg);">-->
+<!--            <div class="textInfo">-->
+<!--                <span class="ageRating">18+</span>-->
+<!--                <span class="selectedIcon">✓</span>-->
+<!--                <span class="movieName">Fight Club(1999)</span>-->
+<!--                <span class="movieRate">(4.7) ★★★★★</span>-->
+<!--            </div>-->
+<!--        </div>-->
     </div>
     <button class="submitFavoritesButton">Next</button>
 </div>
 
 
 <script type="module" src="/front/scripts/movieListChange.js"></script>
+<script type="module" src="/front/scripts/selectFavoritesLogic.js"></script>
 </body>
 </html>
